# PanTompkinsQRS

./: .gitignore  .gitmodules  CMakeLists.txt  panTompkins.c  panTompkins.h
examples/: CMakeLists.txt  example.c
